<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <item android:title="@string/txt_contact_us">
        <menu>
            <item
                android:id="@+id/nav_mail"
                android:icon="@drawable/ic_email"
                android:title="@string/email" />
        </menu>
    </item>

    <group
        android:id="@+id/menu_bottom"
        android:checkableBehavior="none">
        <item
            android:id="@+id/nav_terms"
            android:icon="@drawable/ic_terms"
            android:title="@string/txt_term_condition" />

    </group>

    <group>
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_logout"
            android:title="@string/txt_logout" />
    </group>

</menu>