<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".InformationActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentEnd="true"
        android:background="@drawable/custom_toolbar"
        android:theme="@style/ToolbarTheme"
        app:titleTextColor="@color/icons">

        <TextView
            android:id="@+id/tvMain"
            style="@style/Heading2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textColor="@color/icons"
            android:textStyle="bold" />
    </androidx.appcompat.widget.Toolbar>

    <com.google.android.material.card.MaterialCardView
        android:id="@+id/cardView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_below="@+id/toolbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:elevation="8dp"
        app:cardCornerRadius="32dp"
        app:strokeColor="@color/primary_light"
        app:strokeWidth="1dp">

        <ImageView
            android:id="@+id/imageViewMainMember"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:padding="5dp"
            android:src="@drawable/ic_user" />

    </com.google.android.material.card.MaterialCardView>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/cardView"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:fillViewport="true">

        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stretchColumns="1">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="20dp"
                android:layoutDirection="rtl"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_first_last_name"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textViewFirstLastName"
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_birth_date"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textViewBirthDate"
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_kaser"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textViewKaser"
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_n_phone"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textViewPhone"
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_level"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textViewLevel"
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_speciality"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textViewSpeciality"
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_status"
                        android:textColor="@android:color/darker_gray" />

                    <ImageView
                        android:id="@+id/imageGraduate"
                        android:layout_width="24dp"
                        android:layout_height="24dp"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="10dp"
                        android:src="@drawable/ic_learning" />

                    <TextView
                        android:id="@+id/textViewStatus"
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp"
                        android:text="@string/txt_still_learning"
                        android:textColor="@color/accent" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutUniv"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_univ"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textViewUniv"
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:id="@+id/layoutYearGraduate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal"
                    android:visibility="gone">

                    <TextView
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_year_graduate"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textViewYearGraduate"
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_other_skills"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textViewOtherSkills"
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:orientation="horizontal">

                    <TextView
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/txt_date_inscription"
                        android:textColor="@android:color/darker_gray" />

                    <TextView
                        android:id="@+id/textViewDateInscription"
                        style="@style/Paragraph2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="10dp" />

                </LinearLayout>

            </LinearLayout>
        </TableLayout>
    </ScrollView>
</RelativeLayout>