<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginStart="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginBottom="16dp"
    app:cardBackgroundColor="@color/background_color"
    app:cardCornerRadius="15dp"
    app:cardElevation="8dp">


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:gravity="center_vertical">


        <com.google.android.material.card.MaterialCardView
            android:id="@+id/cardView"
            android:layout_width="65dp"
            android:layout_height="65dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentEnd="true"
            android:layout_centerVertical="true"
            android:elevation="8dp"
            app:cardCornerRadius="32dp"
            app:strokeColor="@color/primary_light"
            app:strokeWidth="1dp">

            <ImageView
                android:id="@+id/imageViewMainMember"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:padding="5dp"
                android:src="@drawable/ic_user" />

        </com.google.android.material.card.MaterialCardView>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_toStartOf="@+id/cardView"
            android:gravity="center"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    style="@style/Paragraph3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/txt_first_last_name"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textViewFirstLastName"
                    style="@style/Paragraph2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    style="@style/Paragraph3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/txt_kaser"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textViewKaser"
                    style="@style/Paragraph2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textStyle="bold" />

            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    style="@style/Paragraph3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/txt_speciality"
                    android:textColor="@android:color/darker_gray" />

                <TextView
                    android:id="@+id/textViewSpeciality"
                    style="@style/Paragraph2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="10dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:textStyle="bold" />

            </LinearLayout>


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layoutDirection="rtl"
                android:orientation="horizontal">

                <TextView
                    style="@style/Paragraph3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/txt_status"
                    android:textColor="@android:color/darker_gray" />

                <ImageView
                    android:id="@+id/imageGraduate"
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="10dp"
                    android:src="@drawable/ic_learning" />

                <TextView
                    android:id="@+id/textViewGraduate"
                    style="@style/Paragraph2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:ellipsize="end"
                    android:singleLine="true"
                    android:text="@string/txt_still_learning"
                    android:textColor="@color/accent"
                    android:textStyle="bold" />
            </LinearLayout>


        </LinearLayout>

    </RelativeLayout>

</com.google.android.material.card.MaterialCardView>